# GraGLeS3D

./: CMakeLists.txt  Doxyfile  ExpandingVector.h  FFTWVector.h  FindBoost.cmake  IGrainScheduler.h  InterfacialElement.cpp  InterfacialElement.h  IterativeGrainScheduler.cpp  IterativeGrainScheduler.h  JobScriptLevelSet_IMM.sh  LinearCurve.cpp  LinearCurve.h  LocalPointset.cpp  LocalPointset.h  Makefile  Plane.cpp  Plane.h  Point3D.cpp  Point3D.h  PointCloudGenerator.cpp  PointCloudGenerator.h  QuadraticCurve.cpp  QuadraticCurve.h  Settings.cpp  Settings.h  Spline.cpp  Spline.h  SquaresGrainScheduler.cpp  SquaresGrainScheduler.h  Structs.h  TriplelinePointsetClass.cpp  TriplelinePointsetClass.h  applic.cpp  applic.h  box.cpp  box.h  contour.cpp  contour.h  contourSector.cpp  (+50 more)
boost_1_53_0/: project-config.jam  project-config.jam.1
boost_1_53_0/lib/: libboost_mpi.so.1.53.0  libboost_mpi_python.so.1.53.0  libboost_serialization.so.1.53.0
boost_1_53_0/stage/lib/: libboost_atomic.so.1.53.0  libboost_chrono.so.1.53.0  libboost_context.so.1.53.0  libboost_filesystem.so.1.53.0  libboost_graph.so.1.53.0  libboost_iostreams.so.1.53.0  libboost_math_c99.so.1.53.0  libboost_math_c99f.so.1.53.0  libboost_prg_exec_monitor.so.1.53.0  libboost_program_options.so.1.53.0  libboost_python.so.1.53.0  libboost_signals.so.1.53.0  libboost_system.so.1.53.0  libboost_unit_test_framework.so.1.53.0  libboost_wave.so.1.53.0
fftw-3.3.2/: config.h  config.status
fftw-3.3.2/.svn/: all-wcprops  entries
fftw-3.3.2/.svn/text-base/: Makefile.svn-base  config.log.svn-base  libtool.svn-base
fftw-3.3.2/api/: Makefile
fftw-3.3.2/api/.deps/: execute-dft-c2r.Plo  execute-dft-r2c.Plo  execute-dft.Plo  execute-r2r.Plo  execute-split-dft-r2c.Plo  execute-split-dft.Plo  export-wisdom-to-file.Plo  f77api.Plo  flops.Plo  forget-wisdom.Plo  import-wisdom-from-string.Plo  malloc.Plo  mkprinter-file.Plo  mktensor-iodims64.Plo  mktensor-rowmajor.Plo  plan-dft-c2r-1d.Plo  plan-dft-c2r-3d.Plo  plan-dft-c2r.Plo  plan-dft-r2c-1d.Plo  plan-dft-r2c-2d.Plo  plan-dft.Plo  plan-guru-dft-r2c.Plo  plan-guru-dft.Plo  plan-guru-r2r.Plo  plan-guru-split-dft-r2c.Plo  plan-guru-split-dft.Plo  plan-guru64-dft-c2r.Plo  plan-guru64-r2r.Plo  plan-guru64-split-dft.Plo  plan-many-dft-c2r.Plo  plan-many-dft.Plo  plan-r2r-1d.Plo  plan-r2r.Plo  the-planner.Plo  version.Plo
fftw-3.3.2/api/.svn/: all-wcprops  entries
fftw-3.3.2/dft/.deps/: conf.Plo  dftw-directsq.Plo  dftw-generic.Plo  indirect-transpose.Plo  kdft-dif.Plo  kdft-difsq.Plo  kdft.Plo  plan.Plo  problem.Plo  rader.Plo  rank-geq2.Plo  solve.Plo  vrank-geq1.Plo
fftw-3.3.2/doc/: Makefile
fftw-3.3.2/kernel/: Makefile
fftw-3.3.2/m4/: Makefile
fftw-3.3.2/mpi/: Makefile
fftw-3.3.2/simd-support/: Makefile
fftw-3.3.2/support/: Makefile
fftw-3.3.2/threads/: Makefile
fftw-3.3.2/tools/: fftw-wisdom
matlib/OriTestEnvToolkit_20140107/: CMakeLists.txt  OriTestEnvToolkit.sln  OriTestEnvToolkit.vcxproj  OriTestEnvToolkit.vcxproj.filters
matlib/OriTestEnvToolkit_20140107/oldStuff/: Eul2Quat2EulSuccessFul.xlsx  MisorientationCubic.xlsx  oribucket.0.IMM.ori
matlib/OriTestEnvToolkit_20140107/runs/: final0.csv  final1.csv  final1.mtex.csv  final2.csv  final2.euler.mtex.csv  final3.csv  final3.mtex.csv  final3.xlsx  final4.csv  final4.mtex.csv  final5Old.csv  final5Old.mtex.csv  final5Old.xlsx  finalShoemake5.csv  import_core6orifile_v04.m  oribucket.10.IMM.uds  oritestenv  oritestenv2mtex_01.asv  randomOri.opj  randomOriOld.IMM.ori  randomOriShoemake.IMM.ori
matlib/OriTestEnvToolkit_20140107/src/: io.h  main.cpp  mymath.cpp  mymath.h
voro++-0.4.4/.svn/: all-wcprops  entries
voro++-0.4.4/src/: cell.cc  cell.cc~  cell.hh~
vorolib/.svn/: all-wcprops  entries
(+618 files in other folders)
